compiling_error.txt
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c: In function 'main':
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:13:15: warning: implicit declaration of function 'sbrk' [-Wimplicit-function-declaration]
   void *ptr = sbrk(0);
               ^~~~
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:13:15: warning: initialization of 'void *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c: In function 'ff_malloc':
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:30:10: error: 'blk_ptr' undeclared (first use in this function); did you mean 'blk_t'?
   return blk_ptr + BLKHD_SIZE;
          ^~~~~~~
          blk_t
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:30:10: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c: In function 'ff_search':
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:38:7: warning: implicit declaration of function 'split'; did you mean 'spilt'? [-Wimplicit-function-declaration]
       split(curr, size);
       ^~~~~
       spilt
In file included from C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:3:
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c: In function 'bf_search':
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:64:46: error: expected ')' before ';' token
         if (bf_blk == NULL) {assert(diff == 0;)}
                                              ^
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:64:30: note: to match this '('
         if (bf_blk == NULL) {assert(diff == 0;)}
                              ^~~~~~
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:64:48: error: expected ';' before '}' token
         if (bf_blk == NULL) {assert(diff == 0;)}
                                                ^
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c: In function 'spilt':
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:79:7: error: 'blk_ptr' undeclared (first use in this function); did you mean 'blk_t'?
   if (blk_ptr == NULL) || (start_ptr->size <= size + 2*BLKHD_SIZE){
       ^~~~~~~
       blk_t
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:79:24: error: expected expression before '||' token
   if (blk_ptr == NULL) || (start_ptr->size <= size + 2*BLKHD_SIZE){
                        ^~
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:83:5: error: 'split_ptr' undeclared (first use in this function); did you mean 'start_ptr'?
     split_ptr->next = NULL
     ^~~~~~~~~
     start_ptr
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:84:5: error: expected ';' before 'split_ptr'
     split_ptr->prev = NULL
     ^~~~~~~~~
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c: In function 'grow_heap':
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:91:21: warning: initialization of 'blk_t *' {aka 'struct _blk_t *'} from 'int' makes pointer from integer without a cast [-Wint-conversion]
   blk_t * new_blk = sbrk(0);
                     ^~~~
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:92:18: warning: initialization of 'void *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
   void * alloc = sbrk(inc_size + BLKHD_SIZE);
                  ^~~~
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c: In function 'ff_free':
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:99:3: error: conversion to non-scalar type requested
   insert_free(BLK_P(us_p)); // insert freed block into free list
   ^~~~~~~~~~~
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c: In function 'bf_free':
C:\Users\prats\OneDrive\Desktop\Duke 1-2\ECE 650 Systems Programming\Homeworks\Homework-1\my_malloc.c:103:3: error: conversion to non-scalar type requested
   insert_free(BLK_P(us_p)); // onsert freed block into free list
   ^~~~~~~~~~~
